setting up DAL and basic models

--- a/Practice Project/appsettings.json
+++ b/Practice Project/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PracticeProjectDbContext": "Server=(localdb)\\mssqllocaldb;Database=PracticeProjectDbContext-54bda28f-d406-40f7-ad32-5e86ffcdf954;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
